# ysh

./: .appveyor.yml  .travis.yml  CODE-OF-CONDUCT.md  Cargo.toml  README.md
doc/rfcs/: 0000-design-goals.md
src/: env.rs  lib.rs  line.rs  main.rs  parse.rs  st.rs  term.rs  terminal.rs  token.rs
src/ast/: builtin.rs  invoke.rs  mod.rs
trie/: Cargo.toml
trie/benches/: bench.rs
trie/src/: lib.rs  map.rs
