[package]
name = "ysh"
version = "0.1.0"
authors = ["Michael Gattozzi <mgattozzi@gmail.com>"]
edition = '2018'

[dependencies]
failure = "0.1"
lazy_static = "1.1"
crossterm = "0.4"
duct = "0.11"

[dependencies.nom]
version = "4"
git = "https://github.com/myrrlyn/nom"
branch = "2018-edition"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
